# TP-projekt-3

./: .gitignore  CMakeLists.txt  README.md  oddanie_projektu.ipynb  plik.py
source/module/: module.cpp
vsstudio/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pybind11app.vcxproj  pybind11app.vcxproj.filters  pybind11module.vcxproj  pybind11module.vcxproj.filters  tp3.sln
